--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans|Ubuntu|Vollkorn" rel="stylesheet">
+
+<!-- My CSS -->
   <link href="css/styles.css" rel="stylesheet">
 
   <!-- I'm trying to get this cool add-on to work on my page, but my page load time drops massively and it doesn't work. It looks like it matches the setup instructions on github and on the demo page (http://caseyscarborough.com/github-activity/). Any ideas whats up-->
@@ -28,56 +32,57 @@
     </head>
 
     <body>
-      <!--http://www.bootply.com/74926#-->
-      <div class="container-fluid">
-        <div class="row">
-          <!--main row of page-->
-          <div class="col-xs-12 col-sm-2  tabs-left"> <!--This is still screwy - can only get responsive resizing of tabs on sm breakpoint-->
-            <!-- column containing tabs-->
-            <ul class="nav nav-tabs">
-              <!-- one idea to keep the number of tabs on this side low - have higher-level catgories that, when clicked on, get pinned to the top and subcategory tabs appear below-->
-              <li class="active"><a href="#">This Is Peyton</a></li>
-              <li><a href="#">Resume</a></li>
-              <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-              <li><a href="#">A One Page Wonder</a></li>
-              <li><a href="MultiItemPage.html">Small Projects</a></li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-10 tab-content">
-            <!-- Column containing content of tab-->
-            <div class="row flex">
-              <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-3 vcenter pull-right">
-                <img id='img-headshot' src="static/headshot.jpg" title="This is a picture of Peyton" class="img-circle left-block">
-              </div>
-              <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
-              <div id="intro-header" class="col-sm-12 col-md-8 col-lg-9 text-right vcenter">
-                <h1>My name is Peyton Tiroff, and I make things</h1>
-                <p> Digitally, usually</p>
-              </div>
-              </div> <!-- Close of first row-->
+    <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
+      <div class id="wrapper">
+        <div id="sidebar-wrapper">
+          <ul class="sidebar-nav">
+            <li class="active"><a href="#">This Is Peyton</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
+            <li><a href="#">A One Page Wonder</a></li>
+            <li><a href="MultiItemPage.html">Small Projects</a></li>
+          </ul>
+        </div>
+        <div id="content-wrapper">
+          <div class="content">
+            <div class="container-fluid">
               <div class="row">
-              <div id="intro-text" class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-10  text-justify">
-                <p>
-                  I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design
-                  <br>
-                  I worked at Medical Information Technology in 2016 for my first co-op, and I've also done research with Professor Kristian Kloeckl on visualizing the energy usage of campus buildings. These experiences have me looking to get into web programming and finding ways to communicate advanced models and concepts to a general audience through easy to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer science interesting, and love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
-                </p>
-              </div>
-              <div class="row">
+                <!--main row of page-->
+                <!-- Column containing content of tab-->
+                <div class="highlight flex">
+                  <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-3  pull-right highlight">
+                    <img id='img-headshot' src="static/headshot.jpg" title="This is a picture of Peyton" class="img-circle left-block">
+                  </div>
+                  <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
+                  <div id="intro-header" class="col-sm-12 col-md-8 col-lg-9 text-right highlight">
+                    <h1>My name is Peyton Tiroff, and I make things</h1>
+                    <p> Digitally, usually</p>
+                  </div>
+                </div>
+                <div class="spacer"></div>
+                <div id="intro-text" class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-10  text-justify">
+                  <p>
+                    I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design. I worked at Medical Information Technology in 2016 for my first co-op, and I've also done research with Professor Kristian Kloeckl on visualizing the energy usage of campus buildings. These experiences have me looking to get into web programming and finding ways to communicate advanced models and concepts to a general audience through easy to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer science interesting, and love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
+                  </p>
+                </div>
                 <div id="activity" class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
                   <h3 class="text-center"> Github Activity </h3>
                   <div id="feed"></div>
+                </div>
+                <div class="spacer col-xs-12">
+                </div>
+                <div class="col-lg-12">
+                  <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!--Close of second row row-->
       </div>
       <!-- Bootstrap core JavaScript-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <script>
-        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>');
       </script>
       <script src="js/bootstrap.min.js"></script>
       <!-- see note above about Activity Stream-->
