--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans|Ubuntu|Vollkorn" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans" rel="stylesheet">
 
 <!-- My CSS -->
   <link href="css/styles.css" rel="stylesheet">
