Added touch slider

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <body>
     <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
       <div class id="wrapper">
-        <div id="sidebar-wrapper">
+        <div id="menu">
           <ul class="sidebar-nav">
             <li class="active"><a href="#">This Is Peyton</a></li>
             <li><a href="#">Resume</a></li>
@@ -43,7 +43,7 @@
             <li><a href="MultiItemPage.html">Small Projects</a></li>
           </ul>
         </div>
-        <div id="content-wrapper">
+        <div id="panel">
           <div class="content">
             <div class="container-fluid">
               <div class="row">
@@ -85,9 +85,11 @@
         window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>');
       </script>
       <script src="js/bootstrap.min.js"></script>
-      <!-- see note above about Activity Stream-->
+      <!-- Activity Stream-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
       <script src="js/github-activity-0.1.4.min.js"></script>
+      <!--Slideout.js-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/0.1.12/slideout.min.js"></script>
       <!--My javascript-->
       <script src="js/script.js"></script>
       <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
