--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -14,10 +14,10 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans" rel="stylesheet">
 
-<!-- My CSS -->
+  <!-- My CSS -->
   <link href="css/styles.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -29,8 +29,8 @@
 
     <body>
       <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
-      <div class id="wrapper">
-        <div id="sidebar-wrapper">
+      <div id="wrapper">
+      <div id="menu">
           <ul class="sidebar-nav">
             <li><a href="index.html">This Is Peyton</a></li>
             <li><a href="#">Resume</a></li>
@@ -39,7 +39,7 @@
             <li><a href="MultiItemPage.html">Small Projects</a></li>
           </ul>
         </div>
-        <div id="content-wrapper">
+        <div id="panel">
           <div class="content">
             <div class="container-fluid">
               <div class="row flex text-justify">
@@ -134,6 +134,10 @@
   ================================================== -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <!--Slideout.js-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/0.1.12/slideout.min.js"></script>
+  <!--My javascript-->
+  <script src="js/script.js"></script>
 </body>
 
 </html>
