removed duplicate code

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <body>
     <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
-      <div class id="wrapper">
+      <div id="wrapper">
         <div id="menu">
           <ul class="sidebar-nav">
             <li class="active"><a href="#">This Is Peyton</a></li>
@@ -81,9 +81,6 @@
       </div>
       <!-- Bootstrap core JavaScript-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <script>
-        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>');
-      </script>
       <script src="js/bootstrap.min.js"></script>
       <!-- Activity Stream-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
@@ -92,7 +89,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/0.1.12/slideout.min.js"></script>
       <!--My javascript-->
       <script src="js/script.js"></script>
-      <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
     </body>
 
     </html>
