temp script added at bottom while I try to fix js file

--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -109,5 +109,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/0.1.12/slideout.min.js"></script>
     <!--My javascript-->
     <script src="js/script.js"></script>
+    <script>
+      var slideout = new Slideout({
+    'panel': document.getElementById('panel'),
+    'menu': document.getElementById('menu'),
+    'padding': 256,
+    'tolerance': 70
+  });
+    </script>
   </body>
   </html>
