--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans" rel="stylesheet">
 
-<!-- My CSS -->
+  <!-- My CSS -->
   <link href="css/styles.css" rel="stylesheet">
 
   <!-- I'm trying to get this cool add-on to work on my page, but my page load time drops massively and it doesn't work. It looks like it matches the setup instructions on github and on the demo page (http://caseyscarborough.com/github-activity/). Any ideas whats up-->
@@ -32,7 +32,7 @@
     </head>
 
     <body>
-    <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
+      <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
       <div id="wrapper">
         <div id="menu">
           <ul class="sidebar-nav">
@@ -49,6 +49,13 @@
               <div class="row">
                 <!--main row of page-->
                 <!-- Column containing content of tab-->
+                <div class="visible-xs-block col-xs-12 menu-pull">
+                  <p>
+                    Swipe Me! =>
+                  </p>
+                </div>
+              </div>
+              <div class="row">
                 <div class="highlight flex">
                   <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-3  pull-right highlight">
                     <img id='img-headshot' src="static/headshot.jpg" title="This is a picture of Peyton" class="img-circle left-block">
