--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -30,7 +30,7 @@
     <body>
       <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
       <div id="wrapper">
-      <div id="menu">
+        <div id="menu">
           <ul class="sidebar-nav">
             <li><a href="index.html">This Is Peyton</a></li>
             <li><a href="#">Resume</a></li>
@@ -42,7 +42,14 @@
         <div id="panel">
           <div class="content">
             <div class="container-fluid">
-              <div class="row flex text-justify">
+              <div class="row">
+                <div class="visible-xs-block col-xs-12 menu-pull">
+                  <p>
+                    Swipe Me! =>
+                  </p>
+                </div>
+              </div>
+              <div class="row  flex text-justify">
                 <div class="col-xs-12">
                   <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
                     <h2 class="text-center"> <strong>Northeastern Energy Flows</strong></h2>
@@ -138,14 +145,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/0.1.12/slideout.min.js"></script>
   <!--My javascript-->
   <script src="js/script.js"></script>
-      <script>
-      var slideout = new Slideout({
-    'panel': document.getElementById('panel'),
-    'menu': document.getElementById('menu'),
-    'padding': 256,
-    'tolerance': 70
-  });
-    </script>
+  <script>
+    var slideout = new Slideout({
+      'panel': document.getElementById('panel'),
+      'menu': document.getElementById('menu'),
+      'padding': 256,
+      'tolerance': 70
+    });
+  </script>
 </body>
 
 </html>
