added links to resume page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="menu">
           <ul class="sidebar-nav">
             <li class="active"><a href="#">This Is Peyton</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="Resume.html">Resume</a></li>
             <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
             <li><a href="#">A One Page Wonder</a></li>
             <li><a href="MultiItemPage.html">Small Projects</a></li>
