--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -33,7 +33,7 @@
         <div id="menu">
           <ul class="sidebar-nav">
             <li><a href="index.html">This Is Peyton</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="Resume.html">Resume</a></li>
             <li class="active"><a href="#">Research: Energy Flows</a></li>
             <li><a href="#">A One Page Wonder</a></li>
             <li><a href="MultiItemPage.html">Small Projects</a></li>
