--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -32,7 +32,7 @@
        <div id="menu">
         <ul class="sidebar-nav">
           <li><a href="index.html">This Is Peyton</a></li>
-          <li><a href="#">Resume</a></li>
+          <li><a href="Resume.html">Resume</a></li>
           <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
           <li><a href="#">A One Page Wonder</a></li>
           <li class="active"><a href="#">Small Projects</a></li>
