moved header text to body and made title just my name

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Droid+Sans|Lato:900" rel="stylesheet">
 
   <!-- My CSS -->
   <link href="css/styles.css" rel="stylesheet">
 
-  <!-- I'm trying to get this cool add-on to work on my page, but my page load time drops massively and it doesn't work. It looks like it matches the setup instructions on github and on the demo page (http://caseyscarborough.com/github-activity/). Any ideas whats up-->
+  <!--Github Repo Style-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
   <link rel="stylesheet" href="css/github-activity-0.1.4.min.css">
 
@@ -62,14 +62,13 @@
                   </div>
                   <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
                   <div id="intro-header" class="col-sm-12 col-md-8 col-lg-9 text-right highlight">
-                    <h1>My name is Peyton Tiroff, and I make things</h1>
-                    <p> Digitally, usually</p>
+                    <h1>PEYTON TIROFF</h1>
                   </div>
                 </div>
                 <div class="spacer"></div>
                 <div id="intro-text" class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-10  text-justify">
                   <p>
-                    I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design. I worked at Medical Information Technology in 2016 for my first co-op, and I've also done research with Professor Kristian Kloeckl on visualizing the energy usage of campus buildings. These experiences have me looking to get into web programming and finding ways to communicate advanced models and concepts to a general audience through easy to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer science interesting, and love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
+                    My name is Peyton Tiroff, and I make things (digitally, usually). I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design. I worked at Medical Information Technology in 2016 for my first co-op, and I've also done research with Professor Kristian Kloeckl on visualizing the energy usage of campus buildings. These experiences have me looking to get into web programming and finding ways to communicate advanced models and concepts to a general audience through easy to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer science interesting, and love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
                   </p>
                 </div>
                 <div id="activity" class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
