changed name of "Small Projects" to "Other Projects" and "One Page Wonder" to "Service Learning" etc

--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -35,8 +35,8 @@
             <li><a href="index.html">This Is Peyton</a></li>
             <li><a href="Resume.html">Resume</a></li>
             <li class="active"><a href="#">Research: Energy Flows</a></li>
-            <li><a href="#">A One Page Wonder</a></li>
-            <li><a href="MultiItemPage.html">Small Projects</a></li>
+            <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
+            <li><a href="MultiItemPage.html">Other Projects</a></li>
           </ul>
         </div>
         <div id="panel">
