--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
       <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
       <div id="wrapper">
         <div id="menu">
+        <div class="flex">
           <ul class="sidebar-nav">
             <li class="active"><a href="#">This Is Peyton</a></li>
             <li><a href="Resume.html">Resume</a></li>
             <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-            <li><a href="#">A One Page Wonder</a></li>
-            <li><a href="MultiItemPage.html">Small Projects</a></li>
+            <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
+            <li><a href="MultiItemPage.html">Other Projects</a></li>
           </ul>
+          </div>
         </div>
         <div id="panel">
           <div class="content">
@@ -51,7 +53,7 @@
                 <!-- Column containing content of tab-->
                 <div class="visible-xs-block col-xs-12 menu-pull">
                   <p>
-                    Swipe Me! =>
+                    Swipe Me Please! =>
                   </p>
                 </div>
               </div>
